# lectures

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  setup.sh
.github/workflows/: classroom.yml
config/: Doxyfile.in
include/: array_bag.h  bag.h  cell.h  csc232.h  int_cell.h  int_memory_cell.h  linked_bag.h  memory_cell.h  node.h  stubbed_bag.h
include/testing/: base_test_fixture.h
src/doc/: lec01.md  lec02.md  lec05.md
src/docs/: lec03.md  lec04.md  lec05.md  lec06.md
src/main/cpp/: array_bag.cpp  array_bag_demo.cpp  bag_demo.cpp  demo.cpp  expanded_templates.cpp  int_memory_cell.cpp  linked_bag.cpp  linked_bag_demo.cpp  main.cpp  memory_cell.cpp  node.cpp  stubbed_bag.cpp  stubbed_bag_demo.cpp
src/main/resources/: class-diagram.puml
src/test/cpp/: test_task1.cpp  test_task2.cpp  test_task3.cpp  test_task4.cpp  test_task5.cpp
